--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -17,7 +17,7 @@
   font-size: 36px;
 }
 
-button {
+/* button {
   width: 100px;
   background-color: #f8f8f8;
   border: 1px solid grey;
@@ -28,4 +28,4 @@ button {
 button:hover {
   background-color: #2c2c77;
   color: #f8f8f8;
-}
+} */
